@@ -1,1 +1,1 @@
-#define TAGSISTANT_BUILDNUMBER "505.20140518.000049"
+#define TAGSISTANT_BUILDNUMBER "507.20140521.000062"
